# mpx

./: .gitignore  .gitmodules  MUJOCO_LOG.TXT  README.md  acrobat.py  barel_roll.py  benchmark.py  console.py  dataset_mjx_quad.py  dataset_mjx_talos.py  dls2_interface.py  horizon.py  invDyn_acrobot  invDyn_acrobot.py  mjx_2quad.py  mjx_h1.py  mjx_humanoid.py  mjx_quad.py  mjx_talos.py  multirobot.py  pyproject.toml  quadruped.py  setup.py  srbd_quad.py  srbd_vectorized_env.py  test_wrapper.py  vectorize_env.py  whole_body_vectorized_env.py
benchmark/: horizon.py  horizon_whole_body.py  multi_env.py  multirobot.py  multirobotAcados.py  multirobot_wholebody.py  whole_body_vectorized_env.py
config/: config_barrel_roll.py  config_go2.py  config_quadruped.py  config_srbd.py
data/aliengo/: aliengo.xml
data/go2/: go2_mjx.xml  go2_mjx_second.xml
data/pal_talos/: talos.xml  talos_full.xml  talos_motor.xml  talos_motor_rough.xml
data/unitree_g1/: g1.xml
data/unitree_h1/: mjx_h1_walk_real_feet.xml
examples/: acrobat.py  barel_roll.py  mjx_h1.py  mjx_quad.py  mjx_talos.py  multi_env.py  srbd_quad.py
mpx/config/: config_aliengo.py  config_barrel_roll.py  config_go2.py  config_h1.py  config_talos.py
mpx/data/go2/: scene_mjx_two.xml
mpx/examples/: acrobat.py  barel_roll.py  mjx_h1.py  mjx_quad.py  mjx_talos.py  multi_env.py  srbd_quad.py
mpx/utils/: console.py  models.py  mpc_utils.py  mpc_wrapper.py  mpc_wrapper_srbd.py  rotation.py
utils/: config.py  config_srbd.py  console.py  models.py  mpc_utils.py  mpc_wrapper.py  mpc_wrapper_srbd.py  objectives.py
(+3 files in other folders)
